--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.base.json",
   "include": [],
   "references": [
+    { "path": "packages/i18prev-codemod/tsconfig.build.json" },
     { "path": "packages/i18prev/tsconfig.build.json" }
   ]
 }
