--- a/packages/i18prev-codemod/package.json
+++ b/packages/i18prev-codemod/package.json
@@ -15,8 +15,16 @@
     "email": "ahrjarrett@gmail.com"
   },
   "@i18prev": {
-    "generateExports": { "include": ["**/*.ts"] },
-    "generateIndex": { "include": ["**/*.ts"] }
+    "generateExports": {
+      "include": [
+        "**/*.ts"
+      ]
+    },
+    "generateIndex": {
+      "include": [
+        "**/*.ts"
+      ]
+    }
   },
   "publishConfig": {
     "access": "public",
@@ -35,6 +43,12 @@
     "clean:deps": "rm -rf node_modules",
     "test": "vitest"
   },
-  "peerDependencies": { "@i18prev/i18prev": "workspace:^" },
-  "devDependencies": { "@i18prev/i18prev": "workspace:^" }
+  "peerDependencies": {
+    "@i18prev/i18prev": "workspace:^"
+  },
+  "devDependencies": {
+    "@i18prev/i18prev": "workspace:^",
+    "@types/jscodeshift": "^17.3.0",
+    "jscodeshift": "^17.3.0"
+  }
 }
